# elodie

./: .gitignore  Makefile  README.md  ideas
bootstrap/: Cargo.toml
bootstrap/src/: main.rs
bootstrap/src/ast/: ast.rs  mod.rs  modifier.rs  token.rs  type.rs
bootstrap/src/backend/: mod.rs
bootstrap/src/core/: ast.rs  (+8 more)
compiler/: index.e
src/cli/: index.e
src/common/: index.test.ec  index.test.elx
src/compiler/: index.ec
src/core/: index.e  index.test.e  index.test.elx
src/sysroot/c/project/: CMakeLists.txt
src/sysroot/c/project/core/: CMakeLists.txt  readme.md
src/sysroot/c/project/core/include/core/: check.h  core-api.h  core.h  io.h  json.h  logger.h  macro.h  operator.h  util.h
src/sysroot/c/project/core/include/core/algo/: algo-api.h  algo-bit.h  algo-hash.h  algo-iterator.h  algo-list-byte.h  algo-list-ptr.h  algo-list.h  algo-map-ptr.h  algo-map.h  algo-ring-buffer-rw.h  algo-ring-buffer.h  algo-set.h
src/sysroot/c/project/core/include/core/bytes/: byte-api.h  bytes-buffer.h  bytes-view.h  bytes.h
src/sysroot/c/project/core/include/core/fsm/: fsm-api.h  fsm-event.h  fsm-state.h  fsm-transition.h  fsm.h
src/sysroot/c/project/core/include/core/mem/: mem-api.h  mem-gc.h  mem-gen.h  mem-null.h  mem-raw.h  mem-stack.h  mem-test.h  mem-vape.h  mem.h
src/sysroot/c/project/core/include/core/native/: native-api.h  native-context.h  native-fn-sig.h  native-fn.h  native-registry.h
src/sysroot/c/project/core/include/core/string/: string-api.h  string-view.h  string.h
src/sysroot/c/project/core/include/core/type/: type-api.h  type-system.h  type.h
src/sysroot/c/project/core/include/core/val/: val-api.h  val-bool.h  val-clsr.h  val-fld.h  val-fn.h  val-kind.h  val-lst.h  val-mod.h  val-nil.h  val-num-f4.h  val-num-f8.h  val-num-i1.h  val-num-i16.h  val-num-i2.h  val-num-i4.h  val-num-i8.h  val-num-u1.h  val-num-u16.h  val-num-u2.h  val-num-u4.h  val-num-u8.h  val-num.h  val-obj.h  val-prop.h  val-ref.h  val-str-view.h  val-str.h  val-unit.h  val-writer.h  val.h
src/sysroot/c/project/core/src/: core.c  io.c  json.c  logger.c  util.c
src/sysroot/c/project/core/src/algo/: algo-bit.c  algo-hash.c  algo-iterator.c  algo-list-byte.c  algo-list-ptr.c  algo-list.c  algo-map-ptr.c  algo-map.c  algo-ring-buffer-rw.c  algo-ring-buffer.c  algo-set.c
src/sysroot/c/project/core/src/bytes/: bytes-buffer.c  bytes-view.c  bytes.c
src/sysroot/c/project/core/src/fsm/: fsm-event.c  fsm-state.c  fsm-transition.c  fsm.c
src/sysroot/c/project/core/src/mem/: mem-api.c  mem-gc.c  mem-gen.c  mem-null.c  mem-raw.c  mem-stack.c  mem-test.c  mem-vape.c  mem.c
src/sysroot/c/project/core/src/native/: native-fn-sig.c  native-registry.c
src/sysroot/c/project/core/src/string/: string-view.c  string.c
src/sysroot/c/project/core/src/type/: type-impl.h  type-internal.c  type-system.c  type.c
src/sysroot/c/project/core/src/val/: val-api.c  val-bool.c  val-clsr.c  val-fld.c  val-fn.c  val-lst.c  val-mod-const-pool.c  val-mod.c  val-nil.c  val-num-f4.c  val-num-f8.c  val-num-i1.c  val-num-i16.c  val-num-i2.c  val-num-i4.c  val-num-i8.c  val-num-u1.c  val-num-u16.c  val-num-u2.c  val-num-u4.c  val-num-u8.c  val-num.c  val-obj.c  val-prop.c  val-str-view.c  val-str.c  val-unit.c  val-writer.c  val.c
src/sysroot/c/project/core/test/unit/: main.cpp  test-check.cpp  test-json.cpp  test-util.cpp  unit-test.h
src/sysroot/c/project/core/test/unit/algo/: test-algo-bit.cpp  test-algo-hash.cpp  test-algo-iterator.cpp  test-algo-list-byte.cpp  test-algo-list-ptr.cpp  test-algo-list.cpp  test-algo-map-ptr.cpp  test-algo-map.cpp  test-algo-ring-buffer-rw.cpp  test-algo-ring-buffer.cpp  test-algo-set.cpp
src/sysroot/c/project/core/test/unit/bytes/: test-bytes-buffer.cpp  test-bytes-view.cpp  test-bytes.cpp
src/sysroot/c/project/core/test/unit/fsm/: test-fsm-event.cpp  test-fsm-state.cpp  test-fsm.cpp
src/sysroot/c/project/core/test/unit/mem/: test-mem-gc.cpp  test-mem-stack.cpp  test-mem-test.cpp  test-mem-vape.cpp
src/sysroot/c/project/core/test/unit/native/: test-native-fn-sig.cpp
src/sysroot/c/project/core/test/unit/string/: test-string-view.cpp  test-string.cpp
src/sysroot/c/project/core/test/unit/type/: test-type-internal.cpp  test-type-system.cpp
src/sysroot/c/project/core/test/unit/val/: test-val-api.cpp  test-val-bool.cpp  test-val-clsr.cpp  test-val-fld.cpp  test-val-fn.cpp  test-val-lst.cpp  test-val-mod-const-pool.cpp  test-val-mod.cpp  test-val-nil.cpp  test-val-num.cpp  test-val-obj.cpp  test-val-prop.cpp  test-val-str-view.cpp  test-val-str.cpp  test-val-unit.cpp
src/sysroot/c/project/playground/: CMakeLists.txt
src/sysroot/c/project/playground/src/: main.c
src/sysroot/c/project/rt/: CMakeLists.txt
src/sysroot/c/project/rt/include/: io.h
src/sysroot/c/project/rt/include/rt/: io.h
src/sysroot/c/project/rt/src/: io.c
src/test-runner/: index.e  index.ec
test/: test.sh
test-deprecated/smoke/: define.ec  function.ec  function_parameter.ec  hello_world.ec  if.ec  lambda.ec  let.ec  loop.ec  multiple_statements.ec  package.ec  scope.ec  test-bootstrap-run.sh  type.ec
test-deprecated/smoke-test-runner/: 0002.ec  0003.ec  0004.ec  0005.ec  0006.ec  0007.ec  0008.ec  test-bootstrap.sh
test/e2e/: bootstrap.sh  readme.md  test.sh
test/lang/: hello_world.e  multiple_statements.e
test/regression/: 000001.e  test-bootstrap.sh
test/smoke/: bootstrap.sh  define.ec  define.elx  function.ec  function.elx  function_parameter.e  function_parameter.ec  function_parameter.elx  hello_world.e  hello_world.ec  hello_world.elx  if.e  if.ec  if.elx  lambda.disabled  lambda.ec  lambda.elx  let.ec  let.elx  loop.e  loop.ec  loop.elx  multiple_statements.e  multiple_statements.elx  package.e  package.ec  package.elx  scope.e  scope.ec  scope.elx  test-bootstrap-build.sh  test-bootstrap.sh  test.sh  type.ec  type.elx
test/smoke-test-runner/: 0001.ec  0002.ec  0003.ec  0004.ec  0005.ec  0006.ec  0007.ec  0008.ec  test-bootstrap.sh
test/spec/: bootstrap.sh
test/suite/: test-bootstrap.sh
test/tck/: bootstrap.sh  readme.md
test/test-runner/: 00001.test.elx
(+661 files in other folders)
